# OpenDroidPDF

./: .gitignore  .gitmodules  CONTRIBUTING.md  C_migration.md  DEPLOYMENT-FDROID.md  Makefile  Makerules  README  TODO.md  UI transition.md  cleanup_plan.md  error_investigation.md  fixingplan.md  implementation_plan.md  odp_overflow.xml  odp_save2.xml  odp_sharechooser.xml  plan.md  refactor_plan.md  tmp_phase2_gesture_log.txt  tmp_smoke_log.txt  todo.md  ui_taxonomy.md  ui_taxonomy_2.md  ui_taxonomy_2_diagram.md  w2.xml  w3.xml
docs/: architecture.md  desktop_linux.md  forms.md  text_annotations_vs_acrobat.md  transition.md  word_import.md
flatpak/: opendroidpdf  org.opendroidpdf.OpenDroidPDF.desktop  org.opendroidpdf.OpenDroidPDF.metainfo.xml  org.opendroidpdf.OpenDroidPDF.yml
platform/android/jni/qpdf/: CMakeLists.txt  qpdf_jni.cpp
scripts/: auto_draw_smoke.sh  build_appimage.sh  cleanup_workspace.sh  fdroid.env.sample  fdroid_build.sh  fdroid_deploy.sh  fdroid_index_refresh.sh  fdroid_lib.sh  geny_doc_unsupported_smoke.sh  geny_docid_rename_smoke.sh  geny_docx_fallback_smoke.sh  geny_docx_officepack_smoke.sh  geny_epub_comments_list_smoke.sh  geny_epub_drm_smoke.sh  geny_epub_edge_relayout_smoke.sh  geny_epub_highlight_reanchor_smoke.sh  geny_epub_image_smoke.sh  geny_epub_ink_layout_lock_smoke.sh  geny_epub_layout_mismatch_smoke.sh  geny_epub_note_background_smoke.sh  geny_epub_smoke.sh  geny_epub_text_search_smoke.sh  geny_epub_theme_paint_only_smoke.sh  geny_epub_toc_smoke.sh  geny_epub_viewport_restore_smoke.sh  geny_eraser_autocommit_smoke.sh  (+45 more)
(+718 files in other folders)
